[package]
name = "half-a-game"
version = "0.1.0"
authors = ["Caspar Krieger <caspar@asparck.com>"]

[dependencies]
piston_window = "0.14.0"
find_folder = "0.2.0"
piston-ai_behavior = "0.7.0"
piston2d-sprite = "0.9.0"
image = "0.3.11"
piston2d-drag_controller = "0.6.0"
gfx = "0.6.5"
gfx_device_gl = "0.4.1"
vecmath = "0.1.1"
camera_controllers = "0.6.0"
pistoncore-sdl2_window = "0.11.0"
rand = "0.3.8"
uuid = "0.1.17"
